--- a/ada101m2.html
+++ b/ada101m2.html
@@ -1,114 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>ADA Exam 1 • S24 ULTRA FIXED</title>
-    <script src="https://cdn.jsdelivr.net/npm/impress.js@1.1.0/js/impress.min.js"></script>
-    <style>
-        body,html{margin:0;padding:0;height:100vh;width:100vw;overflow:hidden;background:#000;color:#fff;font-family:system-ui,sans-serif}
-        #impress{width:100%;height:100%}
-        .step{position:absolute;width:90vw;height:90vh;max-width:1100px;max-height:2000px;margin:auto;left:50%;top:50%;transform:translate(-50%,-50%);padding:80px 60px;background:rgba(10,10,50,0.98);border-radius:40px;border:6px solid #00D4FF;box-shadow:0 0 120px #00D4FF;font-size:45px;line-height:1.4;text-align:center;opacity:0;transition:opacity 1s}
-        .step.present,.fallback .step{opacity:1 !important;display:block !important}
-        h1{font-size:100px;color:#FFD700;text-shadow:0 0 50px #FFD700;margin:30px}
-        h2{font-size:70px;color:#00D4FF;margin:40px}
-        b{color:#FFD700;font-weight:900}
-        ul{text-align:left;display:inline-block;margin:50px 0}
-        li{margin:20px 0;font-size:50px}
-        .fallback .step{position:relative !important;transform:none !important;left:auto !important;top:auto !important;width:100% !important;height:auto !important;margin:20px 0 !important}
-    </style>
+<meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+<title>ADA Exam 1 • S24 ULTRA</title>
+<script src="https://cdn.jsdelivr.net/npm/impress.js@1.1.0/js/impress.min.js"></script>
+<style>
+*,*::before,*::after{box-sizing:border-box;margin:0;padding:0}
+html,body{height:100vh;width:100vw;overflow:hidden;background:#000;color:#fff;font-family:system-ui,sans-serif}
+#impress{position:fixed !important;top:0 !important;left:0 !important;width:100% !important;height:100% !important}
+.step{
+  position:absolute !important;
+  width:95vw !important;height:95vh !important;
+  left:50% !important;top:50% !important;
+  transform:translate(-50%,-50%) !important;
+  padding:40px 30px !important;
+  background:rgba(10,10,50,.98);
+  border-radius:30px;
+  border:6px solid #00D4FF;
+  box-shadow:0 0 80px #00D4FF;
+  font-size:42px !important;
+  line-height:1.4;
+  text-align:center;
+  opacity:0;
+  transition:opacity .8s
+}
+.step.present{opacity:1 !important}
+h1{font-size:88px;color:#FFD700;text-shadow:0 0 40px #FFD700;margin:20px}
+h2{font-size:64px;color:#00D4FF;margin:30px}
+b{color:#FFD700;font-weight:900}
+ul{text-align:left;display:inline-block;margin:40px 0}
+li{margin:18px 0;font-size:48px}
+</style>
 </head>
 <body>
 
-<div id="impress" data-transition-duration="600">
+<div id="impress">
 
-    <div class="step" data-x="0" data-y="0" data-scale="8">
-        <h1>Advanced Data Architecture</h1>
-        <h2>Exam 1 Master Guide</h2>
-        <p style="font-size:70px;margin-top:100px"><b>TAP RIGHT →</b></p>
-    </div>
+  <div class="step" data-x="0" data-y="0" data-scale="7">
+    <h1>Advanced Data Architecture</h1>
+    <h2>Exam 1 • S24 ULTRA</h2>
+    <p style="font-size:70px;margin-top:80px"><b>TAP RIGHT →</b></p>
+  </div>
 
-    <div class="step" data-x="0" data-y="3000">
-        <h2>L1: DA Blueprint</h2>
-        <ul><li>DA = <b>Framework</b> for data assets</li><li>Organize • Connect • Secure</li><li>Long-term scalability</li></ul>
-        <p><b>DA = Blueprint • DE = Builder • DS = Consumer</b></p>
-    </div>
+  <div class="step" data-x="0" data-y="2800">
+    <h2>L1: DA Blueprint</h2>
+    <ul><li>DA = <b>Framework</b> for data assets</li><li>Organize • Connect • Secure</li><li>Long-term scalability</li></ul>
+    <p><b>DA = Blueprint<br>DE = Builder<br>DS = Consumer</b></p>
+  </div>
 
-    <div class="step" data-x="2000" data-y="3000">
-        <h2>L1: Form Follows Function</h2>
-        <ul><li>Real-time fraud → Streaming</li><li>Regulatory → Auditable models</li></ul>
-    </div>
+  <div class="step" data-x="2000" data-y="2800">
+    <h2>L1: Form Follows Function</h2>
+    <ul><li>Fraud → Streaming</li><li>Reporting → Auditable</li></ul>
+  </div>
 
-    <div class="step" data-x="4000" data-y="3000">
-        <h2>L1: Schema Evolution</h2>
-        <ul><li><b>Schema-on-Write</b> → DWH (rigid)</li><li><b>Schema-on-Read</b> → Lake (flexible)</li><li>Evolution: Relational → DWH → Big Data → <b>Lakehouse</b></li></ul>
-    </div>
+  <div class="step" data-x="4000" data-y="2800">
+    <h2>L1: Schema Evolution</h2>
+    <ul><li><b>Schema-on-Write</b> → DWH</li><li><b>Schema-on-Read</b> → Lake</li><li><b>Lakehouse</b> 2020s</li></ul>
+  </div>
 
-    <div class="step" data-x="0" data-y="6000" data-rotate-x="90">
-        <h2>L2: Core Principles</h2>
-        <ul><li>Business Alignment</li><li>Technology Agnosticism</li><li>Modularity • Loose Coupling</li></ul>
-    </div>
+  <div class="step" data-x="0" data-y="5600" data-rotate-x="90">
+    <h2>L2: Core Principles</h2>
+    <ul><li>Business Alignment</li><li>Tech Agnostic</li><li>Modularity + Loose Coupling</li></ul>
+  </div>
 
-    <div class="step" data-x="2000" data-y="6000" data-rotate-x="90">
-        <h2>L2: Trust & Ownership</h2>
-        <ul><li><b>SSOT</b> = Single Source of Truth</li><li>Data as Product</li><li>Metadata • Stewardship</li></ul>
-    </div>
-
-    <div class="step" data-x="4000" data-y="6000" data-rotate-x="90">
-        <h2>L2: Scalability</h2>
-        <ul><li>Push-Based Broker (Pub-Sub)</li><li>TOGAF = Process-oriented</li><li>Zachman = Taxonomy</li></ul>
-    </div>
-
-    <div class="step" data-x="-4000" data-y="0" data-rotate-y="-90">
-        <h2>L3: DWH Core</h2>
-        <ul><li><b>OLAP</b> on structured data</li><li><b>ETL</b> (transform before load)</li><li>Staging • Columnar DBs</li></ul>
-    </div>
-
-    <div class="step" data-x="-4000" data-y="3000" data-rotate-y="-90">
-        <h2>L3: Star Schema</h2>
-        <ul><li>Fact → Dimensions</li><li>Denormalized for speed</li><li>Incremental Batch Load</li></ul>
-    </div>
-
-    <div class="step" data-x="-4000" data-y="6000" data-rotate-y="-90">
-        <h2>L3: OLAP Ops</h2>
-        <ul><li><b>Roll-Up</b> → Aggregate (less detail)</li><li><b>Drill-Down</b> → More detail</li><li><b>Slice</b> → Filter one dim</li><li><b>Dice</b> → Multi-dim sub-cube</li></ul>
-    </div>
-
-    <div class="step" data-x="4000" data-y="0" data-rotate-y="90">
-        <h2>L4: Data Lakes</h2>
-        <ul><li>All data types</li><li>Schema-on-Read</li><li>Bottom-Up • Risk: Data Swamp</li></ul>
-    </div>
-
-    <div class="step" data-x="4000" data-y="3000" data-rotate-y="90">
-        <h2>L4: Zones & ADLS Gen2</h2>
-        <ul><li>Raw → Cleaned → Curated</li><li>HDFS-compatible</li><li>Hierarchical NS • ACLS+RBAC</li></ul>
-    </div>
-
-    <div class="step" data-x="4000" data-y="6000" data-rotate-y="90">
-        <h2>L4: Lakehouse</h2>
-        <ul><li>DL + DWH reliability</li><li><b>ACID</b> on lake</li><li>Unified BI + ML</li></ul>
-    </div>
-
-    <div class="step" data-x="0" data-y="0" data-z="18000" data-scale="18">
-        <h1 style="font-size:150px">EXAM 1<br>100%</h1>
-        <p style="font-size:80px;color:#00D4FF">YOU CRUSHED IT</p>
-    </div>
+  <div class="step" data-x="0" data-y="0" data-z="12000" data-scale="12">
+    <h1 style="font-size:140px">EXAM 1<br>100%</h1>
+    <p style="font-size:80px;color:#00D4FF">YOU WIN</p>
+  </div>
 
 </div>
 
 <script>
-    // BULLETPROOF INIT FOR VIVALDI + S24
-    window.addEventListener('load', () => {
-        try {
-            const api = impress();
-            api.init();
-            api.goto(0);
-            setTimeout(() => api.goto(0), 200);
-            setTimeout(() => api.goto(0), 600);
-        } catch(e) {
-            document.body.classList.add('fallback');
-        }
-    });
+  // THIS LINE MAKES IT WORK ON VIVALDI
+  setTimeout(() => {
+    impress().init();
+    impress().goto(0);
+  }, 100);
 </script>
 
 </body>
