Fix title formatting for Advanced Data Architecture 101

--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
             </a>
 
             <a href="AdvancedDataArchitecture101.html" class="card">
-                <h2><span class="icon">🏘️</span> AdvancedDataArchitecture101</h2>
+                <h2><span class="icon">🏘️</span> Advanced Data Architecture 101</h2>
                 <p>Quick reference guide for Advanced Data Architecture 101.</p>
             </a>
 
