Add mobile references for ADA101 and Finnish 2
Added mobile links for Advanced Data Architecture and Finnish 2.

--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
                 <p>Quick reference guide for Advanced Data Architecture 101.</p>
             </a>
 
-   <a href="ada101m.html" class="card">
+            <a href="ada101m.html" class="card">
                 <h2><span class="icon">🏘️</span> Ada101 mobile</h2>
                 <p>Quick reference guide for Advanced Data Architecture 101 mobile.</p>
             </a>
@@ -188,7 +188,10 @@
                 <h2><span class="icon">🇫🇮</span> Finnish 2</h2>
                 <p>Finnish language learning resources and materials. A102</p>
             </a>
-
+            <a href="Finnish201m.html" class="card">
+                <h2><span class="icon">🇫🇮</span> Finnish 2 mobile</h2>
+                <p>Finnish language learning resources and materials. A102</p>
+            </a>
             <a href="#" class="card">
                 <h2><span class="icon">💬</span> </h2>
                 <p>Interactive chatbot and conversation projects.</p>
