--- a/ada101m.html
+++ b/ada101m.html
@@ -123,7 +123,7 @@
         <div class="slide" style="text-align:center; justify-content:center;">
             <h1>Advanced Data Architecture</h1>
             <h2 style="font-size:2.4em; color:#FFD700;">Exam 1 Master Study Guide (L1-L4)</h2>
-            <div class="gold" style="font-size:1.3em;">@wysiwyg93 • Vaasa, Finland • S24 Ultra Optimized</div>
+            <div class="gold" style="font-size:1.3em;">Däniel Ebrahimzadeh • Vaasa, Finland </div>
             <p style="margin:1.5em 0; font-size:1.1em;">29 Slides of Detailed Content. Scroll <i class="fa-solid fa-arrow-down"></i> to begin.</p>
             <p style="font-size:1em;">Tap <b>Pen</b> to activate drawing mode.</p>
             <div class="footer">Final Version • 12 Nov 2025</div>
