Update footer text in Finnish201m.html

--- a/Finnish201m.html
+++ b/Finnish201m.html
@@ -126,7 +126,7 @@
         <div class="slide" style="text-align:center; justify-content:center;">
             <h1 style="font-size: 4em;">🇫🇮 SUOMI 2</h1>
             <h2 style="font-size:2.4em; color:var(--neon);">Dataydin-Opas: Syväsukellus (Deep Dive)</h2>
-            <div class="gold" style="font-size:1.3em;">Computing Science • Vaasa, Finland • S24 Optimized</div>
+            <div class="gold" style="font-size:1.3em;">Däniel Ebrahimzadeh, Computing Science • Vaasa, Finland </div>
             <p style="margin:1.5em 0; font-size:1.1em;">18 Slides of Core Grammar. Scroll <i class="fa-solid fa-arrow-down"></i> to begin.</p>
             <div class="footer">Self-Study Module • Nov 2025</div>
         </div>
