Update link to Academic Writing resources
Replaced chatbot link with Academic Writing resources link.

--- a/index.html
+++ b/index.html
@@ -192,9 +192,9 @@
                 <h2><span class="icon">🇫🇮</span> Finnish 2 mobile</h2>
                 <p>Finnish language learning resources and materials. A102</p>
             </a>
-            <a href="#" class="card">
-                <h2><span class="icon">💬</span> </h2>
-                <p>Interactive chatbot and conversation projects.</p>
+            <a href="academicwriting.html" class="card">
+                <h2><span class="icon">🇫🇮</span> Academic Writing</h2>
+                <p>Academic Writing  resources and materials.</p>
             </a>
         </div>
 
