--- a/index.html
+++ b/index.html
@@ -184,6 +184,14 @@
                 <h2><span class="icon">🇫🇮</span> Finnish 1</h2>
                 <p>Finnish language learning resources and materials. A101</p>
             </a>
+
+
+<a href="Finnish1m.html" class="card">
+                <h2><span class="icon">🇫🇮</span> Finnish 1 mobile</h2>
+                <p>Finnish language learning resources and materials. A101</p>
+            </a>
+
+
             <a href="Finnish201.html" class="card">
                 <h2><span class="icon">🇫🇮</span> Finnish 2</h2>
                 <p>Finnish language learning resources and materials. A102</p>
