Fix link case sensitivity for Finnish 2 mobile

--- a/index.html
+++ b/index.html
@@ -196,7 +196,7 @@
                 <h2><span class="icon">🇫🇮</span> Finnish 2</h2>
                 <p>Finnish language learning resources and materials. A102</p>
             </a>
-            <a href="Finnish2m.html" class="card">
+            <a href="finnish2m.html" class="card">
                 <h2><span class="icon">🇫🇮</span> Finnish 2 mobile</h2>
                 <p>Finnish language learning resources and materials. A102</p>
             </a>
